# Astra

./: .clang-format  .clang-tidy  .gitignore  Astra_Beginners_Guide_2026-04-06.docx  Astra_Commit_Demo_2026-03-15.docx  Astra_Commit_Documentation_2026-03-15.docx  Astra_Complete_Project_Guide.docx  Astra_Complete_Technical_Documentation.docx  Astra_M01_Phase2_Implementation_Guide.docx  Astra_M06_Session_Summary_2026-04-01.docx  Astra_Project_Bible.docx  Astra_Runtime_Project_Brief.docx  CMakeLists.txt  CMakePresets.json  README.md  fix_clang21.sh  fix_compilation.sh  my_test.cpp  scaffold.sh
Offer Letter/: Astra_Complete_Technical_Documentation.pages
ai_pipeline/datasets/: README.md
ai_pipeline/models/: README.md
ai_pipeline/training/: README.md
docs/: ASTRA_BIBLE.md  DEBUGGER_WALKTHROUGH.md  PAPER1_REPRODUCIBILITY.md  PROJECT_GUIDE.md  PUBLICATION_STRATEGY.md  READING_THE_CODE.md  SESSION_HANDOFF.md
formal/cbmc/: Makefile  README.md  capability_monotonicity.c
formal/coq/: README.md
formal/tlaplus/: README.md
include/astra/allocator/: alloc_audit.h  allocator_service.h  memory_manager.h  pool_allocator.h  quota_manager.h
include/astra/asm_core/: asm_core.h
include/astra/common/: log.h  result.h  types.h  version.h
include/astra/core/: capability.h  demo_service.h  event_bus.h  hook.h  logger.h  process.h  runtime.h  service.h
include/astra/core/ipc/: ipc_adapter.h  ipc_channel.h  ipc_engine.h  ipc_handshake.h  ipc_logger.h  ipc_router.h  ipc_types.h
include/astra/ebpf/: ebpf_service.h  tracepoint.h
include/astra/ipc/: ChannelFactory.hpp  RingBuffer.hpp  Types.hpp
include/astra/isolation/: isolation_service.h  namespace_manager.h  profile_engine.h  seccomp_filter.h
include/astra/observability/: observability_service.h
include/astra/platform/: platform.h
papers/paper1/: README.md  bibliography.bib  build.sh  macros.tex  main.tex  outline.md
papers/paper1/figures/: Makefile  gate_path.tex
papers/paper1/numbers/: numbers.tex  table_1.tex  table_perf.tex
papers/paper1/sections/: 00_abstract.tex  01_intro.tex  02_threat_model.tex  03_background.tex  04_design.tex  05_implementation.tex  06_evaluation.tex  07_discussion.tex  08_related_work.tex  09_conclusion.tex
papers/paper1/submission/: anonymize.sh  author_response_template.md  cover_letter.md
scripts/: check_paper1_env.sh  compile-astra.sh  gen_numbers_tex.py  gen_table_perf.py  plot_paper1_figure.py  plot_paper1_figure_2.py  plot_paper1_figure_3_mpsc.py  plot_paper1_figure_4_revoke.py  run_paper1_sweep.sh
src/: demo_main.cpp  main.cpp
src/ai/: README.md
src/allocator/: CMakeLists.txt  allocator_service.cpp
src/aql/: README.md
src/asm_core/: CMakeLists.txt  asm_core_stubs.cpp
src/asm_core/asm/: cache_ops.asm  ct_compare.asm  ct_select.asm  hwrng.asm  secure_wipe.asm  spectre_barrier.asm  stack_guard.asm
src/checkpoint/: README.md
src/consensus/: README.md
src/core/: CMakeLists.txt  capability.cpp  demo_service.cpp  event_bus.cpp  hook_registry.cpp  ipc_channel.cpp  ipc_engine.cpp  ipc_handshake.cpp  ipc_router.cpp  logger.cpp  process_manager.cpp  runtime.cpp  service_registry.cpp
src/crypto/: README.md
src/ebpf/: CMakeLists.txt  ebpf_service.cpp
src/ebpf/probes/: task_spawn.bpf.c  vmlinux.h
src/hal/: README.md
src/ipc/: CMakeLists.txt  ChannelFactory.cpp  RingBuffer.cpp
src/isolation/: CMakeLists.txt  isolation_service.cpp  namespace_manager.cpp  profile_engine.cpp  seccomp_filter.cpp
src/jobengine/: README.md
src/loader/: README.md
src/net/: README.md
src/observability/: CMakeLists.txt  observability_service.cpp
src/profiler/: README.md
src/replay/: README.md
src/verify/: README.md
src/vfs/: README.md
src/vtime/: README.md
src/wasm/: README.md
tests/allocator/: CMakeLists.txt  test_pool_allocator.cpp  test_sprint2_hardening.cpp  test_sprint3_security.cpp
tests/asm_core/: CMakeLists.txt  test_asm_core.cpp
tests/bench/: CMakeLists.txt  baseline_aeron.cpp  baseline_astra.cpp  baseline_astra_gated.cpp  baseline_erpc.cpp  baseline_io_uring.cpp  baseline_pipe.cpp  baseline_socketpair.cpp  bench_harness.h  bench_perfcounters.cpp  bench_pool_scaling.cpp  bench_revocation_latency.cpp  bench_throughput.cpp  bench_throughput_mpsc.cpp
tests/core/: CMakeLists.txt  bench_validate.cpp
tests/core/integration/: test_spawn_real.cpp
tests/core/unit/: test_capability.cpp  test_capability_concurrency.cpp  test_capability_property.cpp  test_capability_survivability.cpp  test_phase2.cpp
tests/ebpf/: CMakeLists.txt  demo_ebpf_live.cpp  test_ebpf_core.cpp
tests/ipc/: CMakeLists.txt  bench_ipc_with_gate.cpp  bench_latency.cpp  demo_ipc_live.cpp  test_sprint1_channel_factory.cpp  test_sprint1_extended.cpp  test_sprint2_mpsc.cpp  test_sprint2_ring_buffer.cpp  test_sprint3_wait_notify.cpp  test_sprint5_cap_gate.cpp  test_sprint5_gate_concurrency.cpp
tests/ipc/fuzz/: fuzz_gate_target.cpp
tests/isolation/: CMakeLists.txt  test_sprint1_namespace.cpp  test_sprint2_mount.cpp  test_sprint3_seccomp.cpp
tests/phase2_verify/: test_dependency_graph.cpp  test_fork_exec.cpp  test_harness.h  test_hook_registry.cpp  test_scalability.cpp  test_security.cpp
tests/walkthrough/: CMakeLists.txt  walkthrough.cpp
